--- a/setup.css
+++ b/setup.css
@@ -2,6 +2,10 @@
     font-family: 'Poppins', sans-serif;
     margin: 0%;
     padding: 0%;
+    /* width: 95%; */
+    /* background-size: 10%; */
+    size: 10000px;
+    /* max-width: 1200px; */
 }
 body {
     background-color: #d3eefe;
@@ -39,16 +43,32 @@ h2 {
     text-align: center;
     position: relative;
 }
-
 .first-sec .image-wrapper .ingredient-images{
+    position: absolute;
+    top: 65px;
+    right: 0px
+    
+}
+
+.first-sec .image-wrapper {
     position: absolute;
     width: 400px;
     /* background: red; */
-    left: calc(50%- 400px);
+    left: 330px;
     height: 700px;
-    top: 300px;
+    top: 150px;
     
 }
+
+.logo-wrapper{
+    position: sticky;
+    top: 50px;
+    z-index: 9;
+    margin-left: 30px;
+    /* align-items: flex-start; */
+}
+
+
 .section-1-01 {
     position: absolute;
     top: 70px;
@@ -143,6 +163,7 @@ h2 {
 
 .third-section .ingrdient-images-3 img{
     position: absolute;
+    top: 320px;
 }
 
 .forth-section{
@@ -164,4 +185,15 @@ h2 {
 
 .forth-section .ingrdient-images-4 img{
     position: absolute;
+    top: 80px;
+    right: 200px;
+}
+
+.bottom-bar {
+    background: linear-gradient(rgba(10,10,20,0.3),rgba(0,0,0,0.3));
+    height: 40px;
+    text-align: center;
+    color: #d3eefe;
+    font-size: 23px;
+    padding: 10px;
 }
